--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="navbar">
         <div class="container">
-            <a href="#" class="logo">WJ Supply Chain</a>
+            <a href="#" class="logo">WenJin Global</a>
             <div class="lang-switch">
                 <button id="lang-btn">中文 / EN</button>
             </div>
@@ -20,29 +20,29 @@
 
     <section class="hero-section">
         <div class="container">
-            <h1 class="headline" data-lang-zh="您的全球定制化供应链伙伴" data-lang-en="Your Global Customized Supply Chain Partner">您的全球定制化供应链伙伴</h1>
-            <p class="sub-headline" data-lang-zh="从设计到交付，一站式国际供应链服务" data-lang-en="From Design to Delivery, One-stop International Supply Chain Service">从设计到交付，一站式国际供应链服务</p>
+            <h1 class="headline" data-lang-zh="您的全球定制化供应链伙伴" data-lang-en="Your Global Partner in Customized Supply Chain Solutions">您的全球定制化供应链伙伴</h1>
+            <p class="sub-headline" data-lang-zh="从创意到交付，稳金全球为您一站式服务" data-lang-en="From Concept to Delivery, WenJin Global Offers Seamless End-to-End Solutions">从创意到交付，稳金全球为您一站式服务</p>
         </div>
     </section>
 
     <section class="services-section">
         <div class="container">
-            <h2 class="section-title" data-lang-zh="我们的核心业务" data-lang-en="Our Core Services">我们的核心业务</h2>
+            <h2 class="section-title" data-lang-zh="我们的核心服务" data-lang-en="Our Core Services">我们的核心服务</h2>
             <div class="service-grid">
                 <div class="service-item">
                     <i class="fas fa-palette service-icon"></i>
                     <h3 data-lang-zh="个性化产品设计" data-lang-en="Custom Product Design">个性化产品设计</h3>
-                    <p data-lang-zh="我们拥有专业的设计团队，根据您的需求提供创意和定制化的产品设计方案。" data-lang-en="Our professional design team provides creative and customized product design solutions tailored to your needs.">我们拥有专业的设计团队，根据您的需求提供创意和定制化的产品设计方案。</p>
+                    <p data-lang-zh="我们的专业设计团队将您的创意转化为独特且市场导向的产品设计方案。" data-lang-en="Our expert design team transforms your innovative ideas into unique, market-oriented product designs.">我们的专业设计团队将您的创意转化为独特且市场导向的产品设计方案。</p>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-cogs service-icon"></i>
-                    <h3 data-lang-zh="高效生产制造" data-lang-en="Efficient Production & Manufacturing">高效生产制造</h3>
-                    <p data-lang-zh="整合优质生产资源，确保产品质量和生产效率，实现从小批量到大规模生产的灵活支持。" data-lang-en="We integrate high-quality production resources to ensure product quality and efficiency, supporting flexible production from small batches to large-scale orders.">整合优质生产资源，确保产品质量和生产效率，实现从小批量到大规模生产的灵活支持。</p>
+                    <h3 data-lang-zh="高效生产与品质管理" data-lang-en="Efficient Manufacturing & Quality Control">高效生产与品质管理</h3>
+                    <p data-lang-zh="整合全球优质生产资源，严格把控生产流程和产品质量，确保高效交付。" data-lang-en="Leveraging global manufacturing resources, we rigorously control production processes and product quality for efficient delivery.">整合全球优质生产资源，严格把控生产流程和产品质量，确保高效交付。</p>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-truck-fast service-icon"></i>
-                    <h3 data-lang-zh="全球物流与交付" data-lang-en="Global Logistics & Delivery">全球物流与交付</h3>
-                    <p data-lang-zh="专业的物流网络覆盖全球，提供门到门服务，确保您的产品安全、准时送达世界各地。" data-lang-en="Our professional logistics network covers the globe, providing door-to-door services to ensure your products are delivered safely and on time.">专业的物流网络覆盖全球，提供门到门服务，确保您的产品安全、准时送达世界各地。</p>
+                    <h3 data-lang-zh="全球物流与准时交付" data-lang-en="Global Logistics & Timely Delivery">全球物流与准时交付</h3>
+                    <p data-lang-zh="构建完善的国际物流网络，提供安全、高效的门到门服务，确保货物准时送达。" data-lang-en="Our robust international logistics network provides secure, efficient door-to-door services, guaranteeing on-time delivery worldwide.">构建完善的国际物流网络，提供安全、高效的门到门服务，确保货物准时送达。</p>
                 </div>
             </div>
         </div>
@@ -51,7 +51,7 @@
     <section class="about-section">
         <div class="container">
             <h2 class="section-title" data-lang-zh="关于我们" data-lang-en="About Us">关于我们</h2>
-            <p data-lang-zh="深圳稳金国际供应链有限公司，致力于为全球客户提供一站式、端到端的个性化产品供应链解决方案。我们深知每个客户的需求都是独一无二的，因此我们提供从创意、设计、生产到全球物流交付的全方位服务，让您的商业构想成为现实。" data-lang-en="Shenzhen Wenjin International Supply Chain Co., Ltd. is committed to providing global clients with one-stop, end-to-end personalized product supply chain solutions. We understand that every client's needs are unique, which is why we offer comprehensive services from ideation and design to production and global logistics, turning your business ideas into reality.">深圳稳金国际供应链有限公司，致力于为全球客户提供一站式、端到端的个性化产品供应链解决方案。我们深知每个客户的需求都是独一无二的，因此我们提供从创意、设计、生产到全球物流交付的全方位服务，让您的商业构想成为现实。</p>
+            <p data-lang-zh="深圳稳金国际供应链有限公司（WenJin Global）是一家专注于为全球客户提供一站式、端到端定制化产品供应链解决方案的创新型企业。我们深知，在瞬息万变的市场中，独特的创意和高效的执行是成功的关键。因此，我们致力于将您的商业构想从最初的设计理念，经过精密的生产制造，最终通过可靠的全球物流网络，安全、准时地送达世界各地。选择稳金全球，就是选择一个值得信赖、高效专业的合作伙伴，共同创造无限商机。" data-lang-en="Shenzhen WenJin International Supply Chain Co., Ltd. (WenJin Global) is an innovative enterprise dedicated to providing global clients with one-stop, end-to-end customized product supply chain solutions. We understand that in a rapidly changing market, unique ideas and efficient execution are key to success. Therefore, we are committed to transforming your business concepts from initial design, through precise manufacturing, and finally delivering them safely and on time to destinations worldwide via our reliable global logistics network. Choose WenJin Global for a trusted, efficient, and professional partner to unlock limitless business opportunities.">深圳稳金国际供应链有限公司（WenJin Global）是一家专注于为全球客户提供一站式、端到端定制化产品供应链解决方案的创新型企业。我们深知，在瞬息万变的市场中，独特的创意和高效的执行是成功的关键。因此，我们致力于将您的商业构想从最初的设计理念，经过精密的生产制造，最终通过可靠的全球物流网络，安全、准时地送达世界各地。选择稳金全球，就是选择一个值得信赖、高效专业的合作伙伴，共同创造无限商机。</p>
         </div>
     </section>
 
@@ -59,8 +59,8 @@
         <div class="container">
             <h2 class="section-title" data-lang-zh="联系我们" data-lang-en="Contact Us">联系我们</h2>
             <div class="contact-info">
-                <p><i class="fas fa-envelope contact-icon"></i> <span data-lang-zh="邮箱" data-lang-en="Email">邮箱</span>: info@wjsupplychain.com</p>
-                <p><i class="fas fa-phone contact-icon"></i> <span data-lang-zh="电话" data-lang-en="Phone">电话</span>: +86-755-1234 5678</p>
+                <p><i class="fas fa-envelope contact-icon"></i> <span data-lang-zh="邮箱" data-lang-en="Email">邮箱</span>: Captain@wenjin.global</p>
+                <p><i class="fas fa-phone contact-icon"></i> <span data-lang-zh="电话" data-lang-en="Phone">电话</span>: +852 61600784</p>
                 <p><i class="fas fa-map-marker-alt contact-icon"></i> <span data-lang-zh="地址" data-lang-en="Address">地址</span>: 中国广东省深圳市</p>
             </div>
         </div>
