--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <a href="#home" class="logo">WenJin Global</a>
             <nav class="nav-links">
                 <ul>
-                    <li><a href="#home" class="nav-item" data-lang-zh="首页" data-lang-en="Home">首页</a></li>
                     <li><a href="#services-section" class="nav-item" data-lang-zh="核心服务" data-lang-en="Our Services">核心服务</a></li>
+                    <li><a href="#materials-section" class="nav-item" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</a></li>
                     <li><a href="#about-section" class="nav-item" data-lang-zh="关于我们" data-lang-en="About Us">关于我们</a></li>
                     <li><a href="#contact-section" class="nav-item" data-lang-zh="联系我们" data-lang-en="Contact Us">联系我们</a></li>
                 </ul>
             </nav>
             <div class="lang-switch">
-                <button id="lang-btn">中文 / EN</button>
+                <button id="lang-btn" data-lang-zh="EN / 中文" data-lang-en="中文 / EN">中文 / EN</button>
             </div>
         </div>
     </header>
@@ -29,7 +29,7 @@
     <section id="home" class="hero-section">
         <div class="container">
             <h1 class="headline" data-lang-zh="您的全球定制化供应链伙伴" data-lang-en="Your Global Partner in Customized Supply Chain Solutions">您的全球定制化供应链伙伴</h1>
-            <p class="sub-headline" data-lang-zh="从创意到交付，稳金全球为您一站式服务" data-lang-en="From Concept to Delivery, WenJin Global Offers Seamless End-to-End Solutions">从创意到交付，稳金全球为您一站式服务</p>
+            <p class="sub-headline" data-lang-zh="从创意到交付，稳金全球为您提供无缝衔接的一站式服务" data-lang-en="From Concept to Delivery, WenJin Global Offers Seamless End-to-End Solutions">从创意到交付，稳金全球为您提供无缝衔接的一站式服务</p>
         </div>
     </section>
 
@@ -39,18 +39,56 @@
             <div class="service-grid">
                 <div class="service-item">
                     <i class="fas fa-palette service-icon"></i>
-                    <h3 data-lang-zh="个性化产品设计" data-lang-en="Custom Product Design">个性化产品设计</h3>
-                    <p data-lang-zh="我们的专业设计团队将您的创意转化为独特且市场导向的产品设计方案。" data-lang-en="Our expert design team transforms your innovative ideas into unique, market-oriented product designs.">我们的专业设计团队将您的创意转化为独特且市场导向的产品设计方案。</p>
+                    <h3 data-lang-zh="产品设计与研发" data-lang-en="Product Design & Development">产品设计与研发</h3>
+                    <p data-lang-zh="专业的研发团队将您的构想变为现实，提供从概念、3D建模到原型制作的全程支持。" data-lang-en="Our expert R&D team turns your ideas into reality, offering full support from concept and 3D modeling to prototyping.">专业的研发团队将您的构想变为现实，提供从概念、3D建模到原型制作的全程支持。</p>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-cogs service-icon"></i>
-                    <h3 data-lang-zh="高效生产与品质管理" data-lang-en="Efficient Manufacturing & Quality Control">高效生产与品质管理</h3>
-                    <p data-lang-zh="整合全球优质生产资源，严格把控生产流程和产品质量，确保高效交付。" data-lang-en="Leveraging global manufacturing resources, we rigorously control production processes and product quality for efficient delivery.">整合全球优质生产资源，严格把控生产流程和产品质量，确保高效交付。</p>
+                    <h3 data-lang-zh="高效生产与质量控制" data-lang-en="Efficient Manufacturing & Quality Control">高效生产与质量控制</h3>
+                    <p data-lang-zh="整合优质制造资源，严格遵循生产标准，确保产品质量卓越、按时交付，满足从小批量到大规模生产的需求。" data-lang-en="We integrate high-quality manufacturing resources and adhere to strict production standards to ensure exceptional product quality and on-time delivery for both small and large-scale orders.">整合优质制造资源，严格遵循生产标准，确保产品质量卓越、按时交付，满足从小批量到大规模生产的需求。</p>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-truck-fast service-icon"></i>
-                    <h3 data-lang-zh="全球物流与准时交付" data-lang-en="Global Logistics & Timely Delivery">全球物流与准时交付</h3>
-                    <p data-lang-zh="构建完善的国际物流网络，提供安全、高效的门到门服务，确保货物准时送达。" data-lang-en="Our robust international logistics network provides secure, efficient door-to-door services, guaranteeing on-time delivery worldwide.">构建完善的国际物流网络，提供安全、高效的门到门服务，确保货物准时送达。</p>
+                    <h3 data-lang-zh="全球物流与交付" data-lang-en="Global Logistics & Fulfillment">全球物流与交付</h3>
+                    <p data-lang-zh="借助强大的国际物流网络，我们提供门到门运输服务，确保您的产品安全、高效地送达世界各地。" data-lang-en="Leveraging our robust global logistics network, we provide door-to-door shipping services to ensure your products are delivered safely and efficiently worldwide.">借助强大的国际物流网络，我们提供门到门运输服务，确保您的产品安全、高效地送达世界各地。</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="materials-section" class="materials-section">
+        <div class="container">
+            <h2 class="section-title" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</h2>
+            <div class="materials-grid">
+                <div class="material-item">
+                    <i class="fas fa-wrench material-icon"></i>
+                    <h3 data-lang-zh="金属" data-lang-en="Metals">金属</h3>
+                    <p data-lang-zh="不锈钢、铝合金、锌合金等。" data-lang-en="Stainless steel, aluminum alloy, zinc alloy, and more.">不锈钢、铝合金、锌合金等。</p>
+                </div>
+                <div class="material-item">
+                    <i class="fas fa-microchip material-icon"></i>
+                    <h3 data-lang-zh="塑料与橡胶" data-lang-en="Plastics & Rubber">塑料与橡胶</h3>
+                    <p data-lang-zh="ABS、PC、PP、硅胶等，满足不同性能要求。" data-lang-en="ABS, PC, PP, silicone, etc., to meet various performance requirements.">ABS、PC、PP、硅胶等，满足不同性能要求。</p>
+                </div>
+                <div class="material-item">
+                    <i class="fas fa-seedling material-icon"></i>
+                    <h3 data-lang-zh="环保与可再生材料" data-lang-en="Eco-friendly & Recycled Materials">环保与可再生材料</h3>
+                    <p data-lang-zh="可降解塑料、回收纤维等，助力可持续发展。" data-lang-en="Biodegradable plastics, recycled fibers, etc., to support sustainable development.">可降解塑料、回收纤维等，助力可持续发展。</p>
+                </div>
+                <div class="material-item">
+                    <i class="fas fa-cut material-icon"></i>
+                    <h3 data-lang-zh="纺织品" data-lang-en="Textiles">纺织品</h3>
+                    <p data-lang-zh="纯棉、涤纶、尼龙等多种面料选择。" data-lang-en="Cotton, polyester, nylon, and various other fabric options.">纯棉、涤纶、尼龙等多种面料选择。</p>
+                </div>
+                <div class="material-item">
+                    <i class="fas fa-gem material-icon"></i>
+                    <h3 data-lang-zh="宝石与玻璃" data-lang-en="Gems & Glass">宝石与玻璃</h3>
+                    <p data-lang-zh="玻璃、水晶、天然宝石等，用于高端产品。" data-lang-en="Glass, crystal, natural gemstones, etc., for high-end products.">玻璃、水晶、天然宝石等，用于高端产品。</p>
+                </div>
+                <div class="material-item">
+                    <i class="fas fa-box material-icon"></i>
+                    <h3 data-lang-zh="木材与纸张" data-lang-en="Wood & Paper">木材与纸张</h3>
+                    <p data-lang-zh="各种木材和定制包装纸张。" data-lang-en="Various types of wood and custom packaging paper.">各种木材和定制包装纸张。</p>
                 </div>
             </div>
         </div>
