--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
     <header class="navbar">
         <div class="container">
-            <a href="#home" class="logo">WenJin Global</a>
+            <a href="#home" class="logo">
+                <img src="https://imgbed.captainzeqi.com/file/1756967346850_huge.png" alt="WenJin Global Logo">
+            </a>
             <nav class="nav-links">
                 <ul>
+                    <li><a href="#home" class="nav-item" data-lang-zh="首页" data-lang-en="Home">首页</a></li>
                     <li><a href="#services-section" class="nav-item" data-lang-zh="核心服务" data-lang-en="Our Services">核心服务</a></li>
                     <li><a href="#materials-section" class="nav-item" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</a></li>
                     <li><a href="#about-section" class="nav-item" data-lang-zh="关于我们" data-lang-en="About Us">关于我们</a></li>
@@ -21,7 +24,7 @@
                 </ul>
             </nav>
             <div class="lang-switch">
-                <button id="lang-btn" data-lang-zh="EN / 中文" data-lang-en="中文 / EN">中文 / EN</button>
+                <button id="lang-btn">中文 / EN</button>
             </div>
         </div>
     </header>
@@ -61,34 +64,28 @@
             <h2 class="section-title" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</h2>
             <div class="materials-grid">
                 <div class="material-item">
-                    <i class="fas fa-wrench material-icon"></i>
-                    <h3 data-lang-zh="金属" data-lang-en="Metals">金属</h3>
-                    <p data-lang-zh="不锈钢、铝合金、锌合金等。" data-lang-en="Stainless steel, aluminum alloy, zinc alloy, and more.">不锈钢、铝合金、锌合金等。</p>
+                    <i class="fas fa-tree material-icon"></i>
+                    <h3 data-lang-zh="木材" data-lang-en="Wood">木材</h3>
                 </div>
                 <div class="material-item">
-                    <i class="fas fa-microchip material-icon"></i>
-                    <h3 data-lang-zh="塑料与橡胶" data-lang-en="Plastics & Rubber">塑料与橡胶</h3>
-                    <p data-lang-zh="ABS、PC、PP、硅胶等，满足不同性能要求。" data-lang-en="ABS, PC, PP, silicone, etc., to meet various performance requirements.">ABS、PC、PP、硅胶等，满足不同性能要求。</p>
+                    <i class="fas fa-file-alt material-icon"></i>
+                    <h3 data-lang-zh="纸张" data-lang-en="Paper">纸张</h3>
                 </div>
                 <div class="material-item">
-                    <i class="fas fa-seedling material-icon"></i>
-                    <h3 data-lang-zh="环保与可再生材料" data-lang-en="Eco-friendly & Recycled Materials">环保与可再生材料</h3>
-                    <p data-lang-zh="可降解塑料、回收纤维等，助力可持续发展。" data-lang-en="Biodegradable plastics, recycled fibers, etc., to support sustainable development.">可降解塑料、回收纤维等，助力可持续发展。</p>
+                    <i class="fas fa-cube material-icon"></i>
+                    <h3 data-lang-zh="亚克力" data-lang-en="Acrylic">亚克力</h3>
                 </div>
                 <div class="material-item">
                     <i class="fas fa-cut material-icon"></i>
-                    <h3 data-lang-zh="纺织品" data-lang-en="Textiles">纺织品</h3>
-                    <p data-lang-zh="纯棉、涤纶、尼龙等多种面料选择。" data-lang-en="Cotton, polyester, nylon, and various other fabric options.">纯棉、涤纶、尼龙等多种面料选择。</p>
+                    <h3 data-lang-zh="布料" data-lang-en="Fabric">布料</h3>
                 </div>
                 <div class="material-item">
-                    <i class="fas fa-gem material-icon"></i>
-                    <h3 data-lang-zh="宝石与玻璃" data-lang-en="Gems & Glass">宝石与玻璃</h3>
-                    <p data-lang-zh="玻璃、水晶、天然宝石等，用于高端产品。" data-lang-en="Glass, crystal, natural gemstones, etc., for high-end products.">玻璃、水晶、天然宝石等，用于高端产品。</p>
+                    <i class="fas fa-wrench material-icon"></i>
+                    <h3 data-lang-zh="金属" data-lang-en="Metal">金属</h3>
                 </div>
                 <div class="material-item">
-                    <i class="fas fa-box material-icon"></i>
-                    <h3 data-lang-zh="木材与纸张" data-lang-en="Wood & Paper">木材与纸张</h3>
-                    <p data-lang-zh="各种木材和定制包装纸张。" data-lang-en="Various types of wood and custom packaging paper.">各种木材和定制包装纸张。</p>
+                    <i class="fas fa-recycle material-icon"></i>
+                    <h3 data-lang-zh="塑料" data-lang-en="Plastic">塑料</h3>
                 </div>
             </div>
         </div>
