--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>深圳稳金国际供应链有限公司 - 官网</title>
+    <link rel="icon" href="https://imgbed.captainzeqi.com/file/1756967346850_huge.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -13,6 +14,7 @@
         <div class="container">
             <a href="#home" class="logo">
                 <img src="https://imgbed.captainzeqi.com/file/1756967346850_huge.png" alt="WenJin Global Logo">
+                <span>WenJin Global</span>
             </a>
             <nav class="nav-links">
                 <ul>
