--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>深圳稳金国际供应链有限公司 - 官网</title>
+    <title>稳金国际供应链</title>
     <link rel="icon" href="https://imgbed.captainzeqi.com/file/1756967346850_huge.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -14,7 +14,7 @@
         <div class="container">
             <a href="#home" class="logo">
                 <img src="https://imgbed.captainzeqi.com/file/1756967346850_huge.png" alt="WenJin Global Logo">
-                <span>WenJin Global</span>
+                <span class="logo-name" data-lang-zh="稳金国际供应链" data-lang-en="Wenjin Global Supply Chain">稳金国际供应链</span>
             </a>
             <nav class="nav-links">
                 <ul>
@@ -96,7 +96,7 @@
     <section id="about-section" class="about-section">
         <div class="container">
             <h2 class="section-title" data-lang-zh="关于我们" data-lang-en="About Us">关于我们</h2>
-            <p data-lang-zh="深圳稳金国际供应链有限公司（WenJin Global）是一家专注于为全球客户提供一站式、端到端定制化产品供应链解决方案的创新型企业。我们深知，在瞬息万变的市场中，独特的创意和高效的执行是成功的关键。因此，我们致力于将您的商业构想从最初的设计理念，经过精密的生产制造，最终通过可靠的全球物流网络，安全、准时地送达世界各地。选择稳金全球，就是选择一个值得信赖、高效专业的合作伙伴，共同创造无限商机。" data-lang-en="Shenzhen WenJin International Supply Chain Co., Ltd. (WenJin Global) is an innovative enterprise dedicated to providing global clients with one-stop, end-to-end customized product supply chain solutions. We understand that in a rapidly changing market, unique ideas and efficient execution are key to success. Therefore, we are committed to transforming your business concepts from initial design, through precise manufacturing, and finally delivering them safely and on time to destinations worldwide via our reliable global logistics network. Choose WenJin Global for a trusted, efficient, and professional partner to unlock limitless business opportunities.">深圳稳金国际供应链有限公司（WenJin Global）是一家专注于为全球客户提供一站式、端到端定制化产品供应链解决方案的创新型企业。我们深知，在瞬息万变的市场中，独特的创意和高效的执行是成功的关键。因此，我们致力于将您的商业构想从最初的设计理念，经过精密的生产制造，最终通过可靠的全球物流网络，安全、准时地送达世界各地。选择稳金全球，就是选择一个值得信赖、高效专业的合作伙伴，共同创造无限商机。</p>
+            <p data-lang-zh="深圳稳金国际供应链有限公司（Wenjin Global Supply Chain）是一家专注于为全球客户提供一站式、端到端定制化产品供应链解决方案的创新型企业。我们深知，在瞬息万变的市场中，独特的创意和高效的执行是成功的关键。因此，我们致力于将您的商业构想从最初的设计理念，经过精密的生产制造，最终通过可靠的全球物流网络，安全、准时地送达世界各地。选择稳金国际供应链，就是选择一个值得信赖、高效专业的合作伙伴，共同创造无限商机。" data-lang-en="Shenzhen Wenjin International Supply Chain Co., Ltd. (Wenjin Global Supply Chain) is an innovative enterprise dedicated to providing global clients with one-stop, end-to-end customized product supply chain solutions. We understand that in a rapidly changing market, unique ideas and efficient execution are key to success. Therefore, we are committed to transforming your business concepts from initial design, through precise manufacturing, and finally delivering them safely and on time to destinations worldwide via our reliable global logistics network. Choose Wenjin Global Supply Chain for a trusted, efficient, and professional partner to unlock limitless business opportunities.">深圳稳金国际供应链有限公司（Wenjin Global Supply Chain）是一家专注于为全球客户提供一站式、端到端定制化产品供应链解决方案的创新型企业。我们深知，在瞬息万变的市场中，独特的创意和高效的执行是成功的关键。因此，我们致力于将您的商业构想从最初的设计理念，经过精密的生产制造，最终通过可靠的全球物流网络，安全、准时地送达世界各地。选择稳金国际供应链，就是选择一个值得信赖、高效专业的合作伙伴，共同创造无限商机。</p>
         </div>
     </section>
 
@@ -125,7 +125,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 深圳稳金国际供应链有限公司. All Rights Reserved.</p>
+            <p>&copy; 2025 <span data-lang-zh="深圳稳金国际供应链有限公司" data-lang-en="Shenzhen Wenjin International Supply Chain Co., Ltd.">深圳稳金国际供应链有限公司</span>. All Rights Reserved.</p>
         </div>
     </footer>
 
