--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                     <li><a href="#home" class="nav-item" data-lang-zh="首页" data-lang-en="Home">首页</a></li>
                     <li><a href="#services-section" class="nav-item" data-lang-zh="核心服务" data-lang-en="Our Services">核心服务</a></li>
                     <li><a href="#materials-section" class="nav-item" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</a></li>
+                    <li><a href="#cases-section" class="nav-item" data-lang-zh="产品案例" data-lang-en="Product Cases">产品案例</a></li>
                     <li><a href="#about-section" class="nav-item" data-lang-zh="关于我们" data-lang-en="About Us">关于我们</a></li>
                     <li><a href="#contact-section" class="nav-item" data-lang-zh="联系我们" data-lang-en="Contact Us">联系我们</a></li>
                 </ul>
@@ -88,6 +89,42 @@
                 <div class="material-item">
                     <i class="fas fa-recycle material-icon"></i>
                     <h3 data-lang-zh="塑料" data-lang-en="Plastic">塑料</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section id="cases-section" class="cases-section">
+        <div class="container">
+            <h2 class="section-title" data-lang-zh="产品案例" data-lang-en="Product Cases">产品案例</h2>
+            <div class="case-grid">
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131357889_image.png" alt="名片" class="case-image">
+                    <h3 data-lang-zh="名片" data-lang-en="Business Cards">名片</h3>
+                </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131426253_image.png" alt="贴纸" class="case-image">
+                    <h3 data-lang-zh="贴纸" data-lang-en="Stickers">贴纸</h3>
+                </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131543164_image.png" alt="转印贴纸" class="case-image">
+                    <h3 data-lang-zh="转印贴纸" data-lang-en="Transfer Decals">转印贴纸</h3>
+                </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131637394_image.png" alt="磁吸冰箱贴" class="case-image">
+                    <h3 data-lang-zh="磁吸冰箱贴" data-lang-en="Magnetic Fridge Magnets">磁吸冰箱贴</h3>
+                </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131795903_image.png" alt="亚克力相框" class="case-image">
+                    <h3 data-lang-zh="亚克力相框" data-lang-en="Acrylic Photo Frames">亚克力相框</h3>
+                </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131876923_image.png" alt="金属徽章" class="case-image">
+                    <h3 data-lang-zh="金属徽章" data-lang-en="Metal Badges">金属徽章</h3>
+                </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757131943244_48578133e6e529cba4ed27b1fa7a266.jpg" alt="荧光打印" class="case-image">
+                    <h3 data-lang-zh="荧光打印" data-lang-en="Fluorescent Printing">荧光打印</h3>
                 </div>
             </div>
         </div>
