--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                     <img src="https://imgbed.captainzeqi.com/file/1757131943244_48578133e6e529cba4ed27b1fa7a266.jpg" alt="荧光打印" class="case-image">
                     <h3 data-lang-zh="荧光打印" data-lang-en="Fluorescent Printing">荧光打印</h3>
                 </div>
+                <div class="case-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757132164390_image.png" alt="企业套装" class="case-image">
+                    <h3 data-lang-zh="企业套装" data-lang-en="Corporate Kits">企业套装</h3>
+                </div>
             </div>
         </div>
     </section>
