--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <div class="contact-info">
                 <p><i class="fas fa-envelope contact-icon"></i> <span data-lang-zh="邮箱" data-lang-en="Email">邮箱</span>: Captain@wenjin.global</p>
                 <p><i class="fas fa-phone contact-icon"></i> <span data-lang-zh="电话" data-lang-en="Phone">电话</span>: +852 61600784</p>
-                <p><i class="fas fa-map-marker-alt contact-icon"></i> <span data-lang-zh="地址" data-lang-en="Address">地址</span>: 中国广东省深圳市</p>
+                <p><i class="fas fa-map-marker-alt contact-icon"></i> <span data-lang-zh="地址" data-lang-en="Address">地址</span>: <span data-lang-zh="中国广东省深圳市" data-lang-en="Shenzhen Guangdong China">中国广东省深圳市</span></p>
             </div>
             
             <div class="contact-form-container">
