--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <ul>
                     <li><a href="#home" class="nav-item" data-lang-zh="首页" data-lang-en="Home">首页</a></li>
                     <li><a href="#services-section" class="nav-item" data-lang-zh="核心服务" data-lang-en="Our Services">核心服务</a></li>
-                    <li><a href="#materials-section" class="nav-item" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</a></li>
+                    <li><a href="#materials-section" class="nav-item" data-lang-zh="定制材料" data-lang-en="Customizable Materials">定制材料</a></li>
+                    <li><a href="#crafts-section" class="nav-item" data-lang-zh="定制工艺" data-lang-en="Custom Crafts">定制工艺</a></li>
                     <li><a href="#cases-section" class="nav-item" data-lang-zh="产品案例" data-lang-en="Product Cases">产品案例</a></li>
                     <li><a href="#about-section" class="nav-item" data-lang-zh="关于我们" data-lang-en="About Us">关于我们</a></li>
                     <li><a href="#contact-section" class="nav-item" data-lang-zh="联系我们" data-lang-en="Contact Us">联系我们</a></li>
@@ -64,7 +65,7 @@
 
     <section id="materials-section" class="materials-section">
         <div class="container">
-            <h2 class="section-title" data-lang-zh="可定制材料" data-lang-en="Customizable Materials">可定制材料</h2>
+            <h2 class="section-title" data-lang-zh="定制材料" data-lang-en="Customizable Materials">定制材料</h2>
             <div class="materials-grid">
                 <div class="material-item">
                     <i class="fas fa-tree material-icon"></i>
@@ -89,6 +90,30 @@
                 <div class="material-item">
                     <i class="fas fa-recycle material-icon"></i>
                     <h3 data-lang-zh="塑料" data-lang-en="Plastic">塑料</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="crafts-section" class="crafts-section">
+        <div class="container">
+            <h2 class="section-title" data-lang-zh="定制工艺" data-lang-en="Custom Crafts">定制工艺</h2>
+            <div class="craft-grid">
+                <div class="craft-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757134341065_image.png" alt="激光雕刻" class="craft-image">
+                    <h3 data-lang-zh="激光雕刻" data-lang-en="Laser Engraving">激光雕刻</h3>
+                </div>
+                <div class="craft-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757134480513_image.png" alt="切割" class="craft-image">
+                    <h3 data-lang-zh="切割" data-lang-en="Cutting">切割</h3>
+                </div>
+                <div class="craft-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757134545398_image.png" alt="UV打印" class="craft-image">
+                    <h3 data-lang-zh="UV打印" data-lang-en="UV Printing">UV打印</h3>
+                </div>
+                <div class="craft-item">
+                    <img src="https://imgbed.captainzeqi.com/file/1757134612541_image.png" alt="刺绣" class="craft-image">
+                    <h3 data-lang-zh="刺绣" data-lang-en="Embroidery">刺绣</h3>
                 </div>
             </div>
         </div>
