--- a/index.html
+++ b/index.html
@@ -100,19 +100,27 @@
             <h2 class="section-title" data-lang-zh="定制工艺" data-lang-en="Custom Crafts">定制工艺</h2>
             <div class="craft-grid">
                 <div class="craft-item">
-                    <img src="https://imgbed.captainzeqi.com/file/1757134341065_image.png" alt="激光雕刻" class="craft-image">
+                    <div class="craft-image-container">
+                        <img src="https://imgbed.captainzeqi.com/file/1757134341065_image.png" alt="激光雕刻" class="craft-image">
+                    </div>
                     <h3 data-lang-zh="激光雕刻" data-lang-en="Laser Engraving">激光雕刻</h3>
                 </div>
                 <div class="craft-item">
-                    <img src="https://imgbed.captainzeqi.com/file/1757134480513_image.png" alt="切割" class="craft-image">
+                    <div class="craft-image-container">
+                        <img src="https://imgbed.captainzeqi.com/file/1757134480513_image.png" alt="切割" class="craft-image">
+                    </div>
                     <h3 data-lang-zh="切割" data-lang-en="Cutting">切割</h3>
                 </div>
                 <div class="craft-item">
-                    <img src="https://imgbed.captainzeqi.com/file/1757134545398_image.png" alt="UV打印" class="craft-image">
+                    <div class="craft-image-container">
+                        <img src="https://imgbed.captainzeqi.com/file/1757134545398_image.png" alt="UV打印" class="craft-image">
+                    </div>
                     <h3 data-lang-zh="UV打印" data-lang-en="UV Printing">UV打印</h3>
                 </div>
                 <div class="craft-item">
-                    <img src="https://imgbed.captainzeqi.com/file/1757134612541_image.png" alt="刺绣" class="craft-image">
+                    <div class="craft-image-container">
+                        <img src="https://imgbed.captainzeqi.com/file/1757134612541_image.png" alt="刺绣" class="craft-image">
+                    </div>
                     <h3 data-lang-zh="刺绣" data-lang-en="Embroidery">刺绣</h3>
                 </div>
             </div>
