--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="home" class="hero-section">
         <div class="container">
             <h1 class="headline" data-lang-zh="您的全球定制化供应链伙伴" data-lang-en="Your Global Partner in Customized Supply Chain Solutions">您的全球定制化供应链伙伴</h1>
-            <p class="sub-headline" data-lang-zh="从创意到交付，稳金全球为您提供无缝衔接的一站式服务" data-lang-en="From Concept to Delivery, WenJin Global Offers Seamless End-to-End Solutions">从创意到交付，稳金全球为您提供无缝衔接的一站式服务</p>
+            <p class="sub-headline" data-lang-zh="从创意到交付，稳金国际为您提供无缝衔接的一站式服务" data-lang-en="From Concept to Delivery, WenJin Global Offers Seamless End-to-End Solutions">从创意到交付，稳金国际为您提供无缝衔接的一站式服务</p>
         </div>
     </section>
 
@@ -206,3 +206,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
