--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             
             <div class="contact-form-container">
                 <h3 data-lang-zh="发送消息给我们" data-lang-en="Send Us a Message">发送消息给我们</h3>
-                <form action="https://formsubmit.co/shinevista@163.com" method="POST" class="contact-form">
+                <form action="https://formsubmit.co/captain@wenjin.global" method="POST" class="contact-form">
                     <input type="hidden" name="_next" value="https://wenjinglobal.github.io/thank-you.html">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="text" name="name" placeholder="您的姓名 / Your Name" required>
@@ -206,4 +206,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
